name:                elerea-pong
version:             0.1.0.0
synopsis:            A remake of my netwire-pong using elerea instead. Used to invesitage the possible challenges of using elerea instead of Netwire on another, large project.
description:         A remake of my netwire-pong using elerea instead. Used to invesitage the possible challenges of using elerea instead of Netwire on another, large project.
homepage:            http://github.com/crockeo/elerea-pong
license:             MIT
license-file:        LICENSE
author:              Cerek Hillen
maintainer:          cerekh@gmail.com
copyright:           (c) 2014, Cerek Hillen
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

executable elerea-pong
  ghc-options:         -Wall -fno-warn-unused-do-bind

  main-is:             Main.hs

  build-depends:       base   == 4.7.*
               ,       GLFW   == 0.5.2.2
               ,       elerea == 2.7.0.2
               ,       linear == 1.10.1.2
               ,       OpenGL

  hs-source-dirs:      src/

  default-language:    Haskell2010
